Day_1/.metadata/.plugins/org.eclipse.cdt.ui/Day1.5.build.log
00:33:00 **** Build of configuration Debug for project Day1.5 ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp:3:3: error: use of undeclared identifier 'printf'
  printf("Num1  : %d\n", num1);
  ^
1 error generated.
make: *** [src/Main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

00:33:01 Build Failed. 2 errors, 0 warnings. (took 514ms)

